Bug Fix
In this commit, I updated the main.css with a overflow-x:hidden class in HTML, to prevent horizontal scrolling.

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .body_index {
